[gd_scene load_steps=4 format=3 uid="uid://c30ms5boup3ki"]

[ext_resource type="Texture2D" uid="uid://fcodyj6pjpm1" path="res://assets/SpaceInvaders.png" id="1_2ooq4"]
[ext_resource type="Script" path="res://laser.gd" id="1_t57cu"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1om3t"]
size = Vector2(1, 6)

[node name="Node2D" type="Area2D"]
script = ExtResource("1_t57cu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_2ooq4")
hframes = 7
vframes = 5
frame = 2
region_rect = Rect2(39, 5, 1, 6)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_1om3t")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-0.5, 0)
scale = Vector2(0.05, 0.3)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
